# Project-for-computing-at-scale

./: .gitignore  .gitmodules  CMakeLists.txt  Electromechanical_system.cpp  Electromechanical_system_rk4.cpp  Electromechanical_system_rk4_kokkos.cpp  Electromechanical_system_sundials.cpp  README.md  SUNDIAL.cpp  SolverLibrary.hpp  boost.cpp  midterm.md  plot_adios.ipynb  rungekutta.cpp
.github/workflows/: BuildRunTests.yml
Solvers/: ODEs.cpp  SUNDIAL.cpp  SolverLibrary.hpp  rungekutta.cpp
Tests/: test_adios.cpp  test_rk4.cpp  test_sundial.cpp
